fix: spacing values setting

--- a/assets/styles/global.scss
+++ b/assets/styles/global.scss
@@ -538,8 +538,3 @@ a.has-text-grey {
 .w-half {
   width: 50%;
 }
-
-
-.mt-10 {
-  margin-top: 4rem !important;
-}
